[package]
name = "query-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
arrow-flight-sql-client = "0.4.0"
clap = "4.5.31"
env_logger = "0.11.6"
include_dir = "0.7.4"
influx-client = "0.4.1"
influxdb-line-protocol = "2.0.0"
influxdb_iox_client = "0.0.1"
reqwest = "0.12.12"
serde_json = "1.0.139"
telegraf = "0.6.0"
arrow = "50.0.0"
arrow-json = "50.0.0"
